Normalized project structure and added createCuboid().

--- a/README.adoc
+++ b/README.adoc
@@ -1,791 +1,69 @@
 = HB4_AddOns
 
-== Project Objective
-Create reusable objects that effectively extend Home Builder 4 in Blender 4.
+== Project Objectives
 
-== Dimensions in Blender 4 (B4)
-In *B4* the simplest *Mesh Object* is a dimensionless unit cube.
+* Support the creation of a custom Kitchen Design using Blender 4 (B4).
+* Leverage Home Builder 4 (HB4) for components and/or techniques.
+* Create reusable objects that complement or extend HB4 components.
+
+== Strategy
+
+* Utilize HB4's notion of Mesh origin and dimensional stability.
+* Begin with simple from-scratch mesh objects in lieu of extending HB4.
+
+== Insufficient of Off-the-Shelf B4 Dimensions
+
+=== The Unit Cube
+
+* Mesh Objects in B4 do not incorporate real world (aka _world-space_) values.
+* X, Y and Z dimensions are expressed in a _unit dimension_.
+* A unit cube is simply 1-unit wide, 1-unit deep and 1-unit tall.
+* The origin is at the center of the unit cube.
 
 Default Scale::  <x-scale = 1, y-scale = 1, z-scale = 1>
 
-B4 Origin:: Cube Center <x=0, y=0, z=0>
+B4 Origin:: Cube Center <x=0 units, y=0 units, z=0 units>
 
 cube's <x, y, z> vertices (in "units")::
-  < 1/2, 1/2, 1/2 > +
-  < 1/2, 1/2, -1/2 > +
-  < 1/2, -1/2, 1/2 > +
-  < 1/2, -1/2, -1/2 > +
-  < -1/2, 1/2, 1/2 > +
-  < -1/2, 1/2, -1/2 > +
-  < -1/2, -1/2, 1/2 > +
-  < -1/2, -1/2, -1/2 >
+  < 1/2 unit, 1/2 unit, 1/2 unit > +
+  < 1/2 unit, 1/2 unit, -1/2 unit > +
+  < 1/2 unit, -1/2 unit, 1/2 unit > +
+  < 1/2 unit, -1/2 unit, -1/2 unit > +
+  < -1/2 unit, 1/2 unit, 1/2 unit > +
+  < -1/2 unit, 1/2 unit, -1/2 unit > +
+  < -1/2 unit, -1/2 unit, 1/2 unit > +
+  < -1/2 unit, -1/2 unit, -1/2 unit >
 
-For a unit cube with x, y and z axes measured in meters::
+=== B4 Dimensions
 
-* At scale <1, 1, 1> the unit-cube's dimension is "1m x 1m x 1m".
-* At scale <1, 2, 3> the unit-cube's dimension is "1m x 2m x 3m".
-* At scale <2.25, 3.5, 1> the unit-cube's dimension is "2.25m x 3.5m x 1m".
-* In all three cases, the underlying mesh remains "1 unit x 1 unit x 1 unit".
+When Mesh Objects are rendered, "Scale" and "Dimension" come into play. Each axis is assigned a dimensional unit and a "scale" for converting mesh object units to dimensional units.
 
-For a unit cube with x, y and z defined in meters, feet and inches respectively::
+.Example 1 - All three axes adopt 1 meter as the unit of measure.
 
-* At scale <1, 1, 1> the unit-cube's dimension "1m x 1' x 1".
-* At scale <2.25, 3.5, 1> will have dimension "2.25m x 3.5' x 1".
-* In all three cases, the underlying mesh remains "1 unit x 1 unit x 1 unit".
+* At scale <1, 1, 1> the unit-cube's dimension is 1m x 1m x 1m.
+* At scale <1, 2, 3> the unit-cube's dimension is 1m x 2m x 3m.
+* At scale <2.25, 3.5, 1> the unit-cube's dimension is 2.25m x 3.5m x 1m.
 
-NOTE: You CANNOT LOCK an x|y|z dimension, but you CAN LOCK an x|y|z scale. +
- +
-Within a mesh, the x, y and z dimensions are "unit". +
- +
-Once the Mesh exists: +
-(1) Changes to scale impact the dimension. +
-(2) Changes to dimension impact the scale.
+.Example 2 - X adopts 1 meter, y adopts 1 foot, z adopts 1 inch
 
-=== Approaches to "Fix" Dimensions
+* At scale <1, 1, 1> the unit-cube's dimension 1m x 1' x 1".
+* At scale <2.25, 3.5, 1> will have dimension 2.25m x 3.5' x 1".
+* In all three cases, the underlying mesh remains 1 unit x 1 unit x 1 unit".
 
-Option 1: Apply Scale::
-Ctrl + A > Apply Scale - Bakes the current scale into the mesh data, and resets scale to (1, 1, 1). +
-(1) The current dimension becomes part of the mesh, and scale-based changes start fresh. +
-(2) *Lock scale* after applying to prevent further changes.
+=== Relationship between Scale and Dimension
 
-Option 2: Use Geometry Nodes for Procedural Sizing::
-Use procedural modeling to define size via node inputs (making dimensions directly controllable and reproducible).
+In Example 1 and 2 above the underlying mesh object remains "1 unit x 1 unit x 1 unit".
 
-Option 3: Add Constraints::
-Use constraints (e.g., "Limit Scale" or "Transformation") to limit or prevent size changes.
+* Changing the scale of an axis, impacts the corresponding _world-space_ dimension.
+* Changing the _world-space_ dimension of an object, impacts the corresponding axis scale.
 
-NOTE: Home Builder 4 uses Option 2 - Procedural Modeling
+It is not possible to lock the dimension of an axis. But, it is possible to lock the scale of an axis.
 
-== Dimensions in Home Builder 4 (HB4)
+=== HB4's Approach
 
-HB4 Parameters::
-Key world-space measurements that define the object.
-
-HB4 Mesh Objects::
-The unit object (and sub-objects), leverage parameters to instantiate the customized object. [NOTE: IT IS TBD WHETHER THIS IS ACHIEVED adjust x, y and z scale. [Initially, the mesh object's units are the same, just scaled. Tto resize the mesh object (x, y and z units).
-
-Where B4 sets the origin at the center of a unit cube, HB4 sets the origin at the bottom-front-left corner of the object.
-
-For example::
-The requested dimension of the mesh object are realized by scaling x, y and z. Then, the scale is adjusted to `<x-scale = 1, y-scale = 1, z-scale = 1>` and locked in (Ctrl-A), causing the Mesh object's unit dimensions to adjust. Effectively, the object's unit dimensions correspond to the requested dimensions.
-
-== Producing HB4-Like Results
-
-Dimensionally stable objects are realized as follows.
-
-. Create a Geometry Node that takes "world-space" width (w), depth (d), height (h) as input.
-. Add a Cube → Name it "ProceduralCube".
-.	Add a Geometry Nodes modifier.
-..	Use a Cube primitive node.
-..	Plug in inputs like Width, Depth, and Height.
-..	Output it to Group Output.
-.	Back in Object Mode:
-..	Add custom properties (or drivers) to expose dimensions.
-..	Keep cube scale at <1, 1, 1>.
-c.	Control dimensions procedurally.
-
-
-== Initial Objectives
-
-* Sliding drawers
-* Floating shelves
-* Skins (e.g., a Warming Drawer, a Microwave Drawer, ...)
-
-== Initial Approach
-
-•	You’ll define exact world-space dimensions (Width, Height, Depth),
-•	Your object will always have scale = (1, 1, 1),
-•	Dimensions will be stable (e.g., when moved, parented, aligned, ...).
-
-== Template
-Inputs::
-*	Width (X)
-*	Height (Z)
-*	Depth (Y)
-
-Output::
-*	A procedurally-sized rectangular block (from the HB4 Origin), origin at bottom-front-left corner.
-•	You can stack, align, insert, or replace components with stable dimensions.
-Step-by-Step: Create the Geometry Nodes Asset
-1.	Create a New Object
-a.	Add a Mesh → Empty Cube (or any mesh object).
-b.	Name it something like DrawerBlock_GN.
-2.	Add Geometry Nodes Modifier
-a.	Go to Modifiers tab → Add Geometry Nodes → New.
-3.	Inside Geometry Nodes Editor, create the following setup:
-Node Setup:
-Node	Description
-Group Input	Expose Width, Height, Depth as inputs.
-Cube (Mesh Primitive)	Use to generate a mesh.
-Transform	Position the cube at origin properly.
-Group Output	Send result to output.
-Expose Parameters
-1.	Select the Group Input node.
-2.	Click the socket icon next to:
-a.	Width
-b.	Height
-c.	Depth
-3.	Give them default values like:
-a.	Width = 0.6 (60cm)
-b.	Height = 0.15 (15cm)
-c.	Depth = 0.45 (45cm)
-Node Graph (Visual Summary)
-mathematica
-CopyEdit
-[Group Input]
-  Width -----
-  Height ----
-  Depth -----
-
-            ┌────────────────────────────┐
-            │    Mesh Primitive: Cube    │
-            │ Size: 1, 1, 1              │
-            └────────────┬───────────────┘
-                         │
-         ┌───────────────▼────────────────┐
-         │     Transform Geometry Node    │
-         │ Scale: (Width, Depth, Height)  │
-         │ Translate: (Width/2, Depth/2, Height/2) │
-         └───────────────┬────────────────┘
-                         │
-                ┌────────▼────────┐
-                │   Group Output  │
-                └─────────────────┘
-Why we translate by half:
-The primitive cube is centered at the origin. HomeBuilder tends to use bottom-front-left as its object origin. So we move the cube upward and back into that origin alignment.
-Use Case Examples:
-1.	Sliding Drawer Insert
-•	Create an instance of the GN object, name it DrawerInsert01.
-•	Set Width = width of HomeBuilder opening.
-•	Set Height = drawer front panel height.
-•	Set Depth = cabinet inner depth (or slightly less).
-2.	Floating Shelf
-•	Use same GN block.
-•	Add a wall-mounting bracket or constraint for placement.
-3.	Microwave / Warming Drawer Skin
-•	Only model the front face: Adjust the GN node to make it flat and shallow.
-•	You can combine a second GN node inside for “fake” visual depth if needed.
-BONUS: Make it a Reusable Asset
-1.	Click the shield icon next to the Geometry Node group name to make it fake-user saved.
-2.	Rename the GN group to HomeBuilder_CompatibleBlock.
-3.	Save this .blend file and append or link it in other projects.
-Export and share the .blend example?
-I'm glad you're interested — but unfortunately, I can’t directly export or send .blend files through this interface. However, I can guide you step-by-step to create the exact Geometry Nodes setup in Blender 4.x, and once you do it once, you can reuse and expand it easily.
-Manual Build Guide: "HomeBuilder-Compatible Block"
-Here’s a fully detailed step-by-step to reproduce the Geometry Nodes block:
-STEP 1: Create a New Object
-1.	Open Blender.
-2.	Add → Mesh → Cube.
-3.	Rename the cube to: GN_HomeBuilderBlock.
-STEP 2: Add Geometry Nodes Modifier
-1.	With the cube selected, go to the Modifiers tab.
-2.	Add Modifier → Geometry Nodes → click New.
-STEP 3: Build the Node Graph
-Open the Geometry Node Editor and replace the default nodes with the following “Nodes to Add”:
-Node	Settings
-Group Input	Add 3 inputs: Width, Height, Depth
-Cube (Mesh Primitive)	Size: 1 (leave default)
-Transform	Scale: (Width, Depth, Height)
-  Translate: (Width/2, Depth/2, Height/2)
-Group Output	Output the transformed cube mesh
-Add and Connect Like This:
-1.	From Group Input, add:
-a.	Width
-b.	Height
-c.	Depth
-(Click the socket icon to expose inputs)
-2.	Add Mesh Primitive → Cube node.
-3.	Set Size = 1
-4.	Add a Transform node:
-a.	Scale:
-X: Width
-Y: Depth
-Z: Height
-b.	Translation:
-X: Width / 2
-Y: Depth / 2
-Z: Height / 2
-To do this division:
-•	Use 3 Math nodes set to "Divide"
-•	Inputs: Width → Math Node → X Translate, etc.
-Connect Transform → Group Output.
-STEP 4: Test it
-Back in Object Mode:
-•	In the modifier’s Geometry Nodes panel, you’ll see:
-o	Width
-o	Height
-o	Depth
-Set values like:
-•	Width: 0.6 (60cm)
-•	Height: 0.15 (15cm)
-•	Depth: 0.45 (45cm)
-Object will resize but maintain:
-•	Scale = (1, 1, 1)
-•	Accurate world dimensions
-Perfect for HomeBuilder cabinet slots!
-Final Tips
-•	Save this object in a .blend file.
-•	You can append the node group (GN_HomeBuilderBlock) into any project.
-•	Duplicate and reuse for different construct types (drawers, skins, panels).
-Templated File Delivery Options
-I can provide a complete .blend file download link, but I’d need you to upload it somewhere or request that I walk you through preparing that export.
-•	Google Drive … F A I L E D
-•	Dropbox … N O T   T R I E D
-•	GitHub … F A I L E D
-•	WeTransfer … F A I L E D
-Local Brute-Force Options
-Option 1: You Create and Upload the File
-If you'd like me to review or expand on your .blend file:
-1.	Follow the setup above to create the Geometry Nodes object in Blender.
-2.	Save the file as something like HomeBuilder_GN_Template.blend.
-3.	Upload it to Google Drive (or Dropbox, OneDrive, etc.).
-4.	Set sharing permissions to “Anyone with the link can view.”
-5.	Paste the link here — I can then guide you further or suggest improvements.
-Option 2: I Give You a Template to Reproduce
-If you'd rather I prepare a .blend file and you upload it, here's what we can do:
-1.	You create a blank shared Google Drive folder (or upload-enabled link).
-2.	Share the folder link with edit or upload access.
-3.	I’ll describe what the file contains (e.g., GN_HomeBuilderBlock.blend), and you upload a copy there from your end once recreated.
-Alternative: (If You Prefer Speed): Use Paste Files for Nodes
-I can provide the exact Geometry Nodes setup as a .blend-compatible node script or Blender Python snippet that builds the GN modifier automatically. You just paste it into the Scripting tab in Blender, and it builds the object and node group for you — no manual clicking required.
-Would you prefer:
-1.	Me describing what to upload?
-2.	A Python script that builds the object?
-3.	Or continue manually?
-Initially Tried and Failed
-•	Shared a Google Drive folder ("SharedToChatGPT") with Editor access
-Brute Force Option
-ChatGPT provides a ready-made .blend file creation script. You can paste it into Blender's scripting tab, run it, and it will create the Geometry Nodes-based HomeBuilder-compatible block for you — no manual setup needed.
-Blender Python Script to Create the GN Block
-1.	Open Blender.
-2.	Go to the Scripting workspace.
-3.	Open a new script and paste the following code.
-4.	Click Run Script.
-python
-CopyEdit
-import bpy
-import mathutils
-
-# Clean slate
-bpy.ops.object.select_all(action='DESELECT')
-bpy.ops.object.select_by_type(type='MESH')
-bpy.ops.object.delete(use_global=False)
-
-# Add a base cube object
-bpy.ops.mesh.primitive_cube_add()
-obj = bpy.context.active_object
-obj.name = "GN_HomeBuilderBlock"
-
-# Create a new Geometry Nodes modifier
-modifier = obj.modifiers.new(name="GN_BuilderBlock", type='NODES')
-node_group = bpy.data.node_groups.new("HomeBuilder_CompatibleBlock", 'GeometryNodeTree')
-modifier.node_group = node_group
-
-# Create nodes
-nodes = node_group.nodes
-links = node_group.links
-nodes.clear()
-
-# Input and Output nodes
-input_node = nodes.new(type='NodeGroupInput')
-input_node.location = (-600, 0)
-output_node = nodes.new(type='NodeGroupOutput')
-output_node.location = (300, 0)
-
-# Expose parameters
-node_group.inputs.new("NodeSocketFloat", "Width")
-node_group.inputs.new("NodeSocketFloat", "Depth")
-node_group.inputs.new("NodeSocketFloat", "Height")
-node_group.inputs["Width"].default_value = 0.6
-node_group.inputs["Depth"].default_value = 0.45
-node_group.inputs["Height"].default_value = 0.15
-
-# Create cube node
-cube_node = nodes.new(type='GeometryNodeMeshCube')
-cube_node.location = (-300, 0)
-cube_node.inputs['Size X'].default_value = 1.0
-cube_node.inputs['Size Y'].default_value = 1.0
-cube_node.inputs['Size Z'].default_value = 1.0
-
-# Transform node
-transform = nodes.new(type='GeometryNodeTransform')
-transform.location = (0, 0)
-
-# Math nodes for translate
-divide_x = nodes.new(type='ShaderNodeMath')
-divide_x.operation = 'DIVIDE'
-divide_x.inputs[1].default_value = 2
-divide_x.location = (-200, -200)
-
-divide_y = nodes.new(type='ShaderNodeMath')
-divide_y.operation = 'DIVIDE'
-divide_y.inputs[1].default_value = 2
-divide_y.location = (-200, -250)
-
-divide_z = nodes.new(type='ShaderNodeMath')
-divide_z.operation = 'DIVIDE'
-divide_z.inputs[1].default_value = 2
-divide_z.location = (-200, -300)
-
-combine_xyz = nodes.new(type='ShaderNodeCombineXYZ')
-combine_xyz.location = (-20, -200)
-
-# Connect geometry
-links.new(input_node.outputs['Width'], cube_node.inputs['Size X'])
-links.new(input_node.outputs['Depth'], cube_node.inputs['Size Y'])
-links.new(input_node.outputs['Height'], cube_node.inputs['Size Z'])
-
-links.new(cube_node.outputs['Mesh'], transform.inputs['Geometry'])
-
-# Scale not needed as cube size is directly set
-
-# Translate setup
-links.new(input_node.outputs['Width'], divide_x.inputs[0])
-links.new(input_node.outputs['Depth'], divide_y.inputs[0])
-links.new(input_node.outputs['Height'], divide_z.inputs[0])
-
-links.new(divide_x.outputs[0], combine_xyz.inputs['X'])
-links.new(divide_y.outputs[0], combine_xyz.inputs['Y'])
-links.new(divide_z.outputs[0], combine_xyz.inputs['Z'])
-
-links.new(combine_xyz.outputs[0], transform.inputs['Translation'])
-
-links.new(transform.outputs['Geometry'], output_node.inputs['Geometry'])
-Brute Force Features
-•	Adds a clean cube object named GN_HomeBuilderBlock
-•	Attaches a Geometry Nodes modifier named GN_BuilderBlock
-•	Exposes Width, Depth, Height as parameters
-•	Keeps scale at (1, 1, 1)
-•	Aligns the object to bottom-front-left origin — like HomeBuilder parts
-Requested Variants
-Concept: Drawer Front Variant
-•	Width = face width (same as cabinet opening)
-•	Height = drawer face height
-•	Depth = shallow (e.g. 2 cm or 0.02 m)
-•	Origin is still bottom-front-left
-•	Use for skins like warming drawers, microwave drawers, etc.
-Geometry Nodes Python Script: Drawer Front Variant
-Paste and run this in the Blender Scripting tab (new script):
-python
-CopyEdit
-import bpy
-
-# Add a new cube
-bpy.ops.mesh.primitive_cube_add()
-obj = bpy.context.active_object
-obj.name = "GN_DrawerFront"
-
-# Add Geometry Nodes modifier
-modifier = obj.modifiers.new(name="GN_DrawerFace", type='NODES')
-node_group = bpy.data.node_groups.new("DrawerFront_CompatibleBlock", 'GeometryNodeTree')
-modifier.node_group = node_group
-
-nodes = node_group.nodes
-links = node_group.links
-nodes.clear()
-
-# Group Input/Output
-input_node = nodes.new(type='NodeGroupInput')
-input_node.location = (-600, 0)
-
-output_node = nodes.new(type='NodeGroupOutput')
-output_node.location = (300, 0)
-
-# Expose inputs
-node_group.inputs.new("NodeSocketFloat", "Width")
-node_group.inputs.new("NodeSocketFloat", "Height")
-node_group.inputs.new("NodeSocketFloat", "Depth")
-
-node_group.inputs["Width"].default_value = 0.6
-node_group.inputs["Height"].default_value = 0.15
-node_group.inputs["Depth"].default_value = 0.02
-
-# Cube primitive
-cube = nodes.new("GeometryNodeMeshCube")
-cube.location = (-300, 0)
-
-# Transform
-transform = nodes.new("GeometryNodeTransform")
-transform.location = (0, 0)
-
-# Translate center to bottom-front-left
-math_nodes = []
-combine_xyz = nodes.new("ShaderNodeCombineXYZ")
-combine_xyz.location = (-50, -200)
-
-for axis, input_name in zip(["X", "Y", "Z"], ["Width", "Depth", "Height"]):
-    divide = nodes.new("ShaderNodeMath")
-    divide.operation = "DIVIDE"
-    divide.inputs[1].default_value = 2
-    divide.location = (-200, -200 - 50 * len(math_nodes))
-    links.new(input_node.outputs[input_name], divide.inputs[0])
-    links.new(divide.outputs[0], combine_xyz.inputs[axis])
-    math_nodes.append(divide)
-
-# Connections
-links.new(input_node.outputs['Width'], cube.inputs['Size X'])
-links.new(input_node.outputs['Depth'], cube.inputs['Size Y'])
-links.new(input_node.outputs['Height'], cube.inputs['Size Z'])
-
-links.new(cube.outputs['Mesh'], transform.inputs['Geometry'])
-links.new(combine_xyz.outputs[0], transform.inputs['Translation'])
-links.new(transform.outputs['Geometry'], output_node.inputs['Geometry'])
-
-After Running:
-•	You’ll have a GN_DrawerFront object with:
-o	Parameters: Width, Height, Depth
-o	Default Depth = 0.02 (2 cm)
-•	Origin is aligned for placement on a cabinet front face.
-Use Cases
-•	Insert onto a HomeBuilder cabinet as a drawer skin
-•	Use snapping or constraints for precise alignment
-•	Combine with materials or label textures (e.g., Microwave, Warmer)
-Options that ChatGPT Can Offer
-•	Handle placement integration
-•	Inset / bevel control for realism
-•	A version that includes label text (e.g., "Microwave Drawer")
-Options to Proceed
-ChatGPT: I can also prep a script bundle or help you consolidate everything into one template .blend file when you're ready.
-Me: I am interested in the bundle construct and the .blend variant. I often like to split out re-usable functions; so, it would be great if I could create working code that others could leverage.
-ChatGPT: Great — you're thinking modularly, which is exactly how scalable, collaborative Blender projects should be structured. Here's how we can proceed to create a bundle-ready Geometry Nodes system that mimics HomeBuilder and allows for reusable components.
-Prospective Bundle Components
-Option 1 - A .blend file containing:
-1.	Base GN Block
-a.	HomeBuilder_BaseBlock (your master geometry base)
-b.	Inputs: Width, Height, Depth
-c.	Output: Procedural cube with bottom-front-left origin
-2.	Drawer Front Variant
-a.	DrawerFront_CompatibleBlock
-b.	Uses base layout, default shallow depth (e.g., 0.02m)
-3.	Reusable Utility Functions (Node Groups)
-a.	OriginAdjust_BFL (node group for origin realignment)
-b.	CenterToCornerTranslation (used for accurate placement)
-4.	Optional: Inset, Bevel, or HandlePositioner utility groups
-a.	Material Slot Setup
-b.	Group input socket to assign materials (e.g., Face, Side, Inset)
-c.	Compatible with HomeBuilder’s aesthetic
-Option 2: Folder Layout (Bundled Project)
-mathematica
-CopyEdit
-HomeBuilder_GN_Bundle.blend
-/
-├── Node Groups
-│   ├── HomeBuilder_BaseBlock
-│   ├── DrawerFront_CompatibleBlock
-│   ├── OriginAdjust_BFL
-│   └── Optional Utilities
-│
-├── Demo Objects
-│   ├── GN_DrawerFront_Example
-│   └── GN_CustomShelf_Example
-│
-└── Material Slots
-    └── GN_Material_Assignment_Template
-Workflow Goals
-•	You or collaborators can append any node group into other projects.
-•	Everyone gets stable dimension control, matching HomeBuilder logic.
-•	All objects maintain scale = (1, 1, 1).
-•	Geometry Nodes groups serve as procedural libraries, not static assets.
-VsCode Preference Noted
-Me: The zip file would work best. I tend to develop locally and plan to leverage VS Code with extensions Blender Python Code Templates, Blender Development and Python Debugger among others.
-ChatGPT: Perfect — working locally with VS Code + Blender is a great setup. I’ll prepare a .zip bundle containing:
-Prospective “HomeBuilder_GN_Bundle.zip“ Content
-HomeBuilder_GN_Bundle.blend
-•	HomeBuilder_BaseBlock (GN base object)
-•	DrawerFront_CompatibleBlock (variant)
-•	Node groups:
-•	OriginAdjust_BFL
-•	CenterToCornerTranslation
-•	Material socket templates for integration
-scripts/ folder
-•	create_gn_block.py — builds the base GN object
-•	create_drawer_front.py — builds drawer front variant
-•	register_utilities.py — reusable GN utilities
-README.md
-•	Setup instructions
-•	How to append node groups
-•	Notes on HomeBuilder interoperability
-Prospective HomeBuilder_GN_Bundle.zip for GitHub
-•	HomeBuilder_GN_Bundle.blend: Blender file containing:
-o	HomeBuilder_BaseBlock Geometry Nodes group
-o	DrawerFront_CompatibleBlock variant
-o	Utility node groups:
-o	OriginAdjust_BFL
-o	CenterToCornerTranslation
-o	Material slot templates for integration
-•	Python Scripts:
-o	create_gn_block.py: Script to generate the base GN object
-o	create_drawer_front.py: Script to generate the drawer front variant
-o	register_utilities.py: Script to register reusable GN utilities
-•	README.md: Documentation on setup, usage, and integration
-After Downloading
-1.	Unzip the file locally.
-2.	Open a terminal in that folder and run:
-bash
-CopyEdit
-git init
-git remote add origin https://github.com/WesleyMConner/BlenderReusableComponents.git
-git add .
-git commit -m "Initial upload of GN HomeBuilder bundle"
-git push -u origin main
-Bosch Refrigerator Focus
-Can you create a Blender 4 model of the Bosch B36CL80ENS that (1) has fixed dimensions similar to HomeBuilder 4 (2) has doors and drawers that open and close and (3) resembles this refrigerator / freezer inside and out?
-Initial ChatGPT Response
-Yes, I can guide you through creating a Blender 4 model of the Bosch B36CL80ENS refrigerator that meets your requirements:
-Requirements Breakdown
-1.	Fixed Dimensions (HomeBuilder 4 compatibility)
-a.	We'll model the unit to match the real-life dimensions:
-b.	Width: 35.63 in (905 mm)
-c.	Height: 72 in (1829 mm)
-d.	Depth: 28.75 in (730 mm)
-2.	Opening/Closing Doors & Drawers
-a.	We'll rig the doors (French doors and freezer/drawer compartments) with simple pivot points using object parenting and rotation constraints or drivers for animation/interactivity.
-3.	Visual Resemblance (Interior & Exterior)
-a.	Exterior: Stainless steel finish, handles, and Bosch logo.
-b.	Interior: Shelves, drawers, lighting, and camera cutouts matching promotional material.
-Fridge Images
-
-
-
-
-Create a Blender file
-
-
-Overview of Approach
-Step 1: Blender Setup
-•	Open Blender and create a new project.
-•	Set Units:
-o	Go to the Scene Properties tab.
-o	Under Units, select Imperial.
-o	Set Length to Inches.
-Step 2: Modeling the Refrigerator
-Main Body
-•	Add a Cube (Shift + A → Mesh → Cube).
-•	Scale the Cube to match the refrigerator's dimensions:
-o	Width: 35.625 inches
-o	Height: 72 inches
-o	Depth: 28.75 inches
-Doors
-•	Create the Left Door:
-o	Add a Cube and scale it to:
-o	Width: 17.8125 inches
-o	Height: 72 inches
-o	Depth: 1.5 inches
-•	Create the Right Door:
-o	Duplicate the left door (Shift + D), move it to the right, and adjust as needed.
-•	Add Handles:
-o	Use cylinders or cubes to model the handles on each door.
-Freezer Drawer
-1.	Add a Cube for the freezer drawer:
-a.	Width: 35.625 inches
-b.	Height: 15 inches
-c.	Depth: 28.75 inches
-d.	Position it at the bottom of the refrigerator body.
-Interior Shelves and Drawers
-2.	Refrigerator Shelves:
-3.	Add cubes for each shelf.
-4.	Scale and position them inside the refrigerator.
-5.	Freezer Drawers:
-6.	Add cubes for each drawer.
-7.	Scale and position them inside the freezer compartment.
-Step 3: Rigging for Opening Doors and Drawers
-1.	Parent Objects:
-o	Select the door or drawer.
-o	Shift + Right-click to select the refrigerator body.
-o	Press Ctrl + P and choose Object to parent.
-2.	Add Rotation Constraints:
-o	Select the door or drawer.
-o	Go to the Constraints tab.
-o	Add a Limit Rotation constraint to restrict movement to the desired axis (e.g., Z-axis for doors).
-o	Set the Minimum and Maximum angles to control the opening range.
-Step 4: Texturing and Materials
-1.	Exterior:
-o	Apply a stainless steel material with a metallic finish.
-2.	Interior:
-o	Apply a white or light gray material for shelves and drawers.
-3.	Glass Shelves:
-o	Use a transparent material with slight reflection for glass shelves.
-Step 5: Animation (Optional)
-1.	Animate Door Opening:
-o	Select the door.
-o	Insert a keyframe at frame 1 with the door closed.
-o	Move to frame 30 (or desired frame), rotate the door to the open position, and insert another keyframe.
-2.	Animate Drawer Opening:
-o	Follow similar steps for the freezer drawer.
-Step 6: Exporting the Model
-1.	Export as FBX:
-o	Go to File → Export → FBX.
-o	Choose the export settings suitable for your application.
-
-If you encounter any issues or need further assistance with specific steps, feel free to ask!
-Sources
-You said:
-Please do create the Blender file and the model can be static.
-ChatGPT said:
-Thank you for confirming your preference for a static Blender model of the Bosch B36CL80ENS refrigerator. Based on the specifications provided earlier, I will create a detailed 3D model that aligns with the actual dimensions and design features of the appliance.
-📐 Model Specifications
-•	Dimensions: 72" (H) x 35.625" (W) x 27.8125" (D)
-•	Configuration: 4-door French door bottom mount refrigerator
-•	Finish: Stainless steel with anti-fingerprint coating
-•	Interior Details:
-o	Adjustable glass shelves
-o	Wide gallon door bins
-o	LED lighting
-o	FlexBar™ and full-width chiller drawer
-•	Exterior Features:
-o	Integrated recessed handles
-o	Filtered water dispenser
-o	Dual compressors and dual evaporators
-o	Anti-fingerprint stainless steel finishLowe's+1The Home Depot+1Park Ave Appliance+2Martin Appliance+2marcelin.com+2Lowe's+9Build+9Consumer Reports+9Build+2Consumer Reports+2Lowe's+2Lowe's+5marcelin.com+5Park Ave Appliance+5
-🛠️ Model Features
-•	Static Model: The model will be non-interactive, suitable for rendering and visualization purposes.
-•	High-Quality Textures: Realistic materials will be applied to mimic the stainless steel exterior and the interior components.
-•	Detailed Interior: Accurate representation of shelves, bins, and drawers to match the real appliance.
-🔄 Next Steps
-1.	Model Creation: I will begin constructing the 3D model in Blender, ensuring all dimensions and features are accurately represented.
-2.	Texturing and Materials: Apply realistic textures to both the exterior and interior components.
-3.	Final Review: Ensure the model meets your specifications and is ready for export.
-Once the model is complete, I will provide you with a download link for the Blender (.blend) file. If you have any additional requests or specific details you'd like to include, please let me know!
-
-Can you create a Blender 4 model of the Bosch B36CL80ENS that (1) has fixed dimensions similar to HomeBuilder 4 (2) has doors and drawers that open and close and (3) resembles this refrigerator / freezer inside and out?
-ChatGPT said:
-Yes, I can guide you through creating a Blender 4 model of the Bosch B36CL80ENS refrigerator that meets your requirements:
-✅ Requirements Breakdown
-1.	Fixed Dimensions (HomeBuilder 4 compatibility)
-o	We'll model the unit to match the real-life dimensions:
-	Width: 35.63 in (905 mm)
-	Height: 72 in (1829 mm)
-	Depth: 28.75 in (730 mm)
-2.	Opening/Closing Doors & Drawers
-o	We'll rig the doors (French doors and freezer/drawer compartments) with simple pivot points using object parenting and rotation constraints or drivers for animation/interactivity.
-3.	Visual Resemblance (Interior & Exterior)
-o	Exterior: Stainless steel finish, handles, and Bosch logo.
-o	Interior: Shelves, drawers, lighting, and camera cutouts matching promotional material.
-
-🔧 Options to Proceed
-Option 1: I Can Provide the Blender .blend File
-If you'd like a completed .blend file:
-•	I’ll create it and share a download link (you’d need to confirm if file sharing is acceptable).
-•	I can also export to .fbx or .glb for HomeBuilder 4 or other applications.
-Option 2: Step-by-Step Creation Guide (DIY in Blender 4)
-If you'd prefer to model it yourself, I can give:
-•	Full step-by-step modeling instructions
-•	Rigging setup for doors/drawers
-•	Texturing and material setup
-•	Reference images and measurements
-
-🧱 What I Need From You
-1.	Do you want me to create and send the Blender file, or do you prefer a step-by-step guide to make it yourself?
-2.	Will this model be static, or do you want animations/interactivity (e.g., for real-time rendering or game engines)?
-3.	Any specific interior shelving layout or optional components (e.g., ice maker, deli drawer features)?
-Once you confirm your preference, I’ll either start the modeling process or guide you through it!
-You said:
-Option 1
-ChatGPT said:
-
-
-
-
-Thank you for choosing Option 1! I'm excited to assist you in creating a Blender model of the Bosch B36CL80ENS refrigerator that meets your specifications. Here's a step-by-step guide to help you through the process:
-
-🛠️ Step 1: Blender Setup
-1.	Open Blender and create a new project.
-2.	Set Units:
-o	Go to the Scene Properties tab.
-o	Under Units, select Imperial.
-o	Set Length to Inches.
-
-📏 Step 2: Modeling the Refrigerator
-2.1 Main Body
-1.	Add a Cube (Shift + A → Mesh → Cube).
-2.	Scale the Cube to match the refrigerator's dimensions:
-o	Width: 35.625 inches
-o	Height: 72 inches
-o	Depth: 28.75 inches
-2.2 Doors
-1.	Create the Left Door:
-o	Add a Cube and scale it to:
-	Width: 17.8125 inches
-	Height: 72 inches
-	Depth: 1.5 inches
-2.	Create the Right Door:
-o	Duplicate the left door (Shift + D), move it to the right, and adjust as needed.
-3.	Add Handles:
-o	Use cylinders or cubes to model the handles on each door.
-2.3 Freezer Drawer
-1.	Add a Cube for the freezer drawer:
-o	Width: 35.625 inches
-o	Height: 15 inches
-o	Depth: 28.75 inches
-2.	Position it at the bottom of the refrigerator body.
-2.4 Interior Shelves and Drawers
-1.	Refrigerator Shelves:
-o	Add cubes for each shelf.
-o	Scale and position them inside the refrigerator.
-2.	Freezer Drawers:
-o	Add cubes for each drawer.
-o	Scale and position them inside the freezer compartment.
-
-🔧 Step 3: Rigging for Opening Doors and Drawers
-3.	Parent Objects:
-o	Select the door or drawer.
-o	Shift + Right-click to select the refrigerator body.
-o	Press Ctrl + P and choose Object to parent.
-4.	Add Rotation Constraints:
-o	Select the door or drawer.
-o	Go to the Constraints tab.
-o	Add a Limit Rotation constraint to restrict movement to the desired axis (e.g., Z-axis for doors).
-o	Set the Minimum and Maximum angles to control the opening range.
-
-🎨 Step 4: Texturing and Materials
-4.	Exterior:
-o	Apply a stainless steel material with a metallic finish.
-5.	Interior:
-o	Apply a white or light gray material for shelves and drawers.
-6.	Glass Shelves:
-o	Use a transparent material with slight reflection for glass shelves.
-
-🎥 Step 5: Animation (Optional)
-3.	Animate Door Opening:
-o	Select the door.
-o	Insert a keyframe at frame 1 with the door closed.
-o	Move to frame 30 (or desired frame), rotate the door to the open position, and insert another keyframe.
-4.	Animate Drawer Opening:
-o	Follow similar steps for the freezer drawer.
-
-📦 Step 6: Exporting the Model
-2.	Export as FBX:
-o	Go to File → Export → FBX.
-o	Choose the export settings suitable for your application.
-
-If you encounter any issues or need further assistance with specific steps, feel free to ask!
-Sources
-You said:
-Please do create the Blender file and the model can be static.
-ChatGPT said:
-Thank you for confirming your preference for a static Blender model of the Bosch B36CL80ENS refrigerator. Based on the specifications provided earlier, I will create a detailed 3D model that aligns with the actual dimensions and design features of the appliance.
-📐 Model Specifications
-•	Dimensions: 72" (H) x 35.625" (W) x 27.8125" (D)
-•	Configuration: 4-door French door bottom mount refrigerator
-•	Finish: Stainless steel with anti-fingerprint coating
-•	Interior Details:
-o	Adjustable glass shelves
-o	Wide gallon door bins
-o	LED lighting
-o	FlexBar™ and full-width chiller drawer
-•	Exterior Features:
-o	Integrated recessed handles
-o	Filtered water dispenser
-o	Dual compressors and dual evaporators
-o	Anti-fingerprint stainless steel finishLowe's+1The Home Depot+1Park Ave Appliance+2Martin Appliance+2marcelin.com+2Lowe's+9Build+9Consumer Reports+9Build+2Consumer Reports+2Lowe's+2Lowe's+5marcelin.com+5Park Ave Appliance+5
-🛠️ Model Features
-•	Static Model: The model will be non-interactive, suitable for rendering and visualization purposes.
-•	High-Quality Textures: Realistic materials will be applied to mimic the stainless steel exterior and the interior components.
-•	Detailed Interior: Accurate representation of shelves, bins, and drawers to match the real appliance.
-🔄 Next Steps
-4.	Model Creation: I will begin constructing the 3D model in Blender, ensuring all dimensions and features are accurately represented.
-5.	Texturing and Materials: Apply realistic textures to both the exterior and interior components.
-6.	Final Review: Ensure the model meets your specifications and is ready for export.
-Once the model is complete, I will provide you with a download link for the Blender (.blend) file. If you have any additional requests or specific details you'd like to include, please let me know!
-
-
+* Establishes key parameters (e.g., width, depth, height) before creating Mesh objects.
+* Create a unit Cube.
+* Add a Transform Geometry Node
+** Scale: (Width, Depth, Height)
+** Translate: (Width/2, Depth/2, Height/2) - to adjust B4 origin to HB4 origin
+** Group Output
